# phd-fba-temporal-biosynthesis

./: .gitignore  README.md  abl_vs_enz_usage.ipynb  constrain_fluxes.ipynb  constrain_pool.ipynb  dev_abl-vs-enz-use.py  dev_barchartgrid.py  dev_flux_constraint.py  dev_flux_penalty.py  dev_grid.py  dev_piechart.ipynb  dev_piechart.py  dev_yeast8model.py  ec-demand.ipynb  ec-media.ipynb  ec-mol_weights.ipynb  ec.ipynb  ecoli_sandbox.ipynb  enz_usg_heatmap.ipynb  fba_yeast_diane.ipynb  flux_penalty.ipynb  grid.ipynb  iMM904-biomass-categories.csv  modelling-temporal-iMM904.ipynb  modelling_temporal-ec.ipynb  modelling_temporal-ec_batch-ablate.ipynb  modelling_temporal-ec_batch-deletions.ipynb  modelling_temporal-ec_batch-media.ipynb  modelling_temporal-ec_batch-mol_weights.ipynb  modelling_temporal-ec_batch.ipynb  modelling_temporal-grid.ipynb  modelling_temporal-yeast8.ipynb  modelling_temporal.ipynb  pathdef.m  pyproject.toml  rationale.org  requirements.txt  sanchezImprovingPhenotypePredictions2017.ipynb  sanchezImprovingPhenotypePredictions2017_jl.ipynb  sandbox.ipynb  (+7 more)
dev/: dev_ablate.py  dev_barchartgrid.py  dev_constrain_fluxes.py  dev_custom_ratio.py  dev_eucl.py  dev_flux_penalty.py  dev_grid.py  dev_heatmap.py  dev_piechart.py  dev_similarity.py  dev_streamplot.py  dev_susceptibility.py  dev_susceptibility_rot.py  dev_yeast8model.py
notebooks/: abl_vs_enz_usage.ipynb  ablation.ipynb  combined_barplot.ipynb  compare_enz_use.ipynb  constrain_fluxes.ipynb  constrain_pool.ipynb  debug_growthrates.ipynb  deletions.ipynb  demand.ipynb  dev_abl_vs_enz_use.ipynb  ec-ablate.ipynb  ec-deletions.ipynb  ec-demand.ipynb  ec-media.ipynb  ec-mol_weights.ipynb  ec.ipynb  ecYeast8.ipynb  enz_usg_heatmap.ipynb  fba_yeast_diane.ipynb  flux_penalty.ipynb  grid.ipynb  grid_euclidean.ipynb  media.ipynb  pca.ipynb  (+6 more)
(+62 files in other folders)
