[tool.poetry]
name = "fba-temporal-biosynthesis"
version = "0.1.0"
description = ""
authors = ["Arin Wongprommoon <arin.wongprommoon@ed.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
