[tool.poetry]
name = "fba-temporal-biosynthesis"
version = "0.1.0"
description = ""
authors = ["arinwongprommoon <arin.wongprommoon@ed.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
markupsafe = "2.0.1"
cobra = "^0.26.3"
numpy = ">=1.13,<1.24"
pandas = ">=1.0,<2.0"
wrapt-timeout-decorator = "^1.3.12.2"
matplotlib = "^3.7.1"
Escher = "^1.7.3"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
scipy = ">=1.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
flake8 = ">=4.0.1"
pyright = "^1.1.309"
jupytext = "^1.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
